// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|UserCreate/UserCreateProject Default 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-hMFtBS hkJjEF"
  >
    <span>
      Loading...
    </span>
  </div>
</div>
`;

exports[`Storyshots UserCreateProject Default 1`] = `
<div
  className="sc-hMFtBS hkJjEF"
>
  <span>
    Loading...
  </span>
</div>
`;
